--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Ben's profile page</h1>
     <div class="profile card">
-      <img class="image_round" src="/images/Profile.jpg" alt="Profile picture" width = 50px>
+      <img class="image_round" src="images/Profile.jpg" alt="Profile picture" width = 50px>
       <h2>Ben Penton</h2>
       <p>19 Years Old <br>Learning to code</p>
     </div>
@@ -49,7 +49,7 @@
         <tbody>
           <tr>
             <td>
-              <img src="/images/ShawshankRedemption.jpg" alt="Shawshank redemption movie poster" >
+              <img src="images/ShawshankRedemption.jpg" alt="Shawshank redemption movie poster" >
             </td>
             <td>
               <strong>ShawShank Redemption</strong><br>Really good movie, kinda a cliche that I put it here though
@@ -58,7 +58,7 @@
 
           <tr>
             <td>
-              <img src="/images/UsualSuspects.jpg" alt="The Usual Suspects">
+              <img src="images/UsualSuspects.jpg" alt="The Usual Suspects">
             </td>
             <td><strong>The Usual Suspects</strong><br>It was a very good movie, until I found out that Kevin Spacey is a pedo. Kinda awkward to watch now</td>
           </tr>
@@ -75,14 +75,14 @@
         <tbody>
           <tr>
             <td>
-              <img id="foo_fighters" src="/images/Foo.jpg" alt="FooFighters">
+              <img id="foo_fighters" src="images/Foo.jpg" alt="FooFighters">
             </td>
             <td><strong>Foo Fighters</strong></td>
           </tr>
 
           <tr>
             <td>
-              <img id="gorillaz" src="/images/Gorillaz.jpeg" alt="Gorillaz">
+              <img id="gorillaz" src="images/Gorillaz.jpeg" alt="Gorillaz">
             </td>
             <td><strong>Gorillaz</strong></td>
           </tr>
